--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<h1 id="f1">Flowers photos</h1>
+		<p>here is some dummy notes about this topic irst div contain a h1 with id f1 and content "Flowers photos" and a paragraph tag to show the information of the flo </p>
+	</div>
+	<div>
+		<h1 id="f2">Roses pictures</h1>
+		<p>dummy notes about this topic irst div contain a h1 with</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
